# penumbra-mobile

./: index.html  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json  vite.config.ts
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs  view_server.rs
src/app/: App.tsx  layout.tsx  main.tsx  router.tsx
src/entities/auth/: guard.tsx  index.ts  use-connection.ts
src/pages/onboarding/: import.tsx  index.ts  key-store.ts  password.tsx  sync.tsx  use-connection.ts
src/pages/onboarding/model/: state.ts
src/pages/onboarding/ui/: import.tsx  password.tsx  router.tsx
src/pages/sync/: index.ts  page.tsx  router.tsx
src/shared/commands/: generate-keys.ts  get-address-by-index.ts  get-block-height.ts  is-connected.ts
src/shared/types/: pages.ts
